--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,8 @@ header .main-header ul li a {
   grid-area: tTop;
   width: 100%;
   height: 86vh;
+  padding-top: 30px;
+  padding-left: 400px;
   background-image: url('../img/recycle-your-devices.jpg');
   background-repeat: no-repeat;
   background-position: center;
@@ -122,7 +124,7 @@ header .main-header ul li a {
 }
 
 .body .top-body .top-top p {
-  font-size: 1.6rem;
+  font-size: 3rem;
 }
 
 .body .top-body .btm-top {
