--- a/css/main.css
+++ b/css/main.css
@@ -433,7 +433,7 @@ header .main-header ul li a {
 }
 
 .grid .body .main-body .testimonials .test1 #tPerson1 {
-  align-self: center;
+  align-self: flex-end;
   max-width: 100%;
   height: 200px;
   grid-area: tPerson1;
