--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,10 @@ a {
 }
 
 /*-----------------MAIN GRID-------------------*/
+.page-container {
+  max-width: fit-content;
+}
+
 body .grid {
   display: grid;
   min-width: 960px;
@@ -577,24 +581,32 @@ header .main-header ul li a {
 @media (max-width: 975px) {
   .grid .body .top-body {
     color: #fff;
-    width: 100%;
+
     height: 100%;
     display: grid;
     grid-template-columns: 1fr;
-    grid-auto-rows: minmax(100px, auto);
     grid-template-areas:
       'tTop'
-      'tTop'
-      'tTop'
-      'tTop'
-      'bTop'
       'bTop';
   }
-  /*.body .top-body .top-top{
-		grid-area: tTop;
-		background-image: url("../img/recycle-your-devices.jpg");
-		background-repeat: no-repeat;
-		background-position: center;
-		background-size: 100%;
-	}*/
+
+  header .main-header {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      'headerP'
+      'headerUl';
+  }
+
+  header .main-header p {
+    text-align: center;
+  }
+
+  .body .top-body .top-top {
+    grid-area: tTop;
+    padding-left: 0;
+    background-image: url('../img/recycle-your-devices.jpg');
+    background-repeat: no-repeat;
+    background-position: contain;
+    background-size: 100%;
+  }
 }
