--- a/css/main.css
+++ b/css/main.css
@@ -26,7 +26,7 @@ a {
 
 body .grid {
   display: grid;
-  min-width: 960px;
+  max-width: 960px;
   width: 100%;
   grid-template-columns: repeat(12, 1fr);
   /* grid-auto-rows: minmax(10px, auto); */
@@ -579,9 +579,12 @@ header .main-header ul li a {
 
 /*------MEDIA QUERY MAX-WIDTH 975PX-------*/
 @media (max-width: 975px) {
+  body .grid {
+    grid-template-columns: 1fr;
+  }
+
   .grid .body .top-body {
     color: #fff;
-
     height: 100%;
     display: grid;
     grid-template-columns: 1fr;
